# merovingian

./: Cargo.toml  README.md  TODO.md
frontend/: package.json  tslint.json
frontend/public/: index.html
frontend/src/: App.vue
frontend/src/views/: Home.vue  Settings.vue
mero-db/: Cargo.toml
mero-db/src/: lib.rs
src/: cmd.rs  collections.rs  config.rs  error.rs  ffprobe.rs  flicks.rs  index.rs  input.rs  local_storage.rs  main.rs  mero.rs  scan.rs  storage.rs  string.rs  utils.rs
src/cmd/: apply.rs  ignore.rs  images.rs  import.rs  init.rs  query.rs  rehash.rs  scan.rs  stats.rs  sync.rs  view.html  view.rs
src/cmd/html/: view.html  view_macros.html
src/collections/: fixed_string.rs
src/flicks/: collections.rs  database.rs  error.rs  ffprobe.rs  fingerprint.rs  index.rs  library.rs  scan.rs  transfer.rs  tree.rs  utils.rs  vfs.rs
src/flicks/collections/: counter.rs  fixed_string.rs
src/index/: counter.rs  index.rs  mod.rs
src/io/: fingerprint.rs  mod.rs  transfer.rs
src/mero/: error.rs  fingerprint.rs  index.rs  library.rs  scan.rs  themoviedb.rs  tmdb.rs  transfer.rs  utils.rs  vfs.rs
src/mero/collections/: counter.rs
src/scan/: heuristics.rs  mod.rs  paths.rs  scan.rs  tree.rs  vfs.rs
src/service/: ffprobe.rs  mod.rs  tmdb.rs
