[package]
name = "flicks2"
version = "0.1.0"
authors = ["Simon Bernier St-Pierre <sbernierstpierre@gmail.com>"]
edition = "2018"

[dependencies]
bincode = "1"
chardet = "0.2"
csv = "1"
encoding = "0.2"
env_logger = "0.6"
flate2 = "1"
hashbrown = { version = "0.1", features = ["serde"] }
lazy_static = "1"
log = "0.4"
reqwest = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.8"
strsim = "0.8"
subparse = "0.3"
whatlang = "0.6"
