[package]
name = "mero"
version = "0.1.0"
authors = ["Simon Bernier St-Pierre <sbernierstpierre@gmail.com>"]
edition = "2018"

[dependencies]
bincode = "1"
chardet = "0.2"
csv = "1"
dirs = "1"
encoding_rs = "0.8"
flate2 = "1"
hashbrown = { version = "0.1", features = ["serde"] }
lazy_static = "1"
lynx = { git = "https://github.com/sbstp/lynx.git" }
open = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.8"
signal-hook = "0.1"
strsim = "0.8"
structopt = "0.2"
subparse = { git = "https://github.com/sbstp/subparse.git" }
tera = "0.11"
whatlang = "0.6"

[profile.dev]
opt-level = 1
debug = 1
